apps/artifactory/base/artifactory/artifactory-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: artifactory
  namespace: artifactory  
spec:
  serviceName: "artifactory"
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
  template:
    metadata:
      labels:
        app: artifactory
    spec:
      securityContext:
        runAsUser: 1030
        runAsGroup: 1030
        fsGroup: 1030    
      nodeSelector:
        kubernetes.io/hostname: cakers-worker-1.lab.local    
      containers:
      - name: artifactory
        image: docker.bintray.io/jfrog/artifactory-oss:latest
        ports:
        - containerPort: 8081
          name: http
        volumeMounts:
        - name: artifactory-storage
          mountPath: /var/opt/jfrog/artifactory
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: artifactory-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
      volumeName: artifactory-pv   # Bind explicitly to hostPath PV
