apps/artifactory/base/artifactory/artifactory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifactory
  namespace: artifactory  
spec:
  type: ClusterIP
  selector:
    app: artifactory
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
